--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -11,13 +11,13 @@
                         <div class="form-group">
                             <input type="text" class="form-control" name="title" placeholder="Title" autofocus>
                         </div>
-                        <div class="forum-grup">
+                        <div class="form-group">
                             <input type="url" name="url" class="form-control" placeholder="URL">
                         </div>
                         <div class="form-group">
                             <textarea name="description" rows="2" class="form-control" placeholder="Description"></textarea>
                         </div>
-                        <div class="forum-group">
+                        <div class="form-group">
                             <button class="btn btn-success btn-block">
                                 Save
                             </button>
